--- a/src/unit2.lfm
+++ b/src/unit2.lfm
@@ -229,6 +229,14 @@ object Form2: TForm2
     TabOrder = 8
     OnClick = Button7Click
   end
+  object CheckBox1: TCheckBox
+    Left = 8
+    Height = 22
+    Top = 443
+    Width = 219
+    Caption = 'Always jump to last search result'
+    TabOrder = 9
+  end
   object SelectDirectoryDialog1: TSelectDirectoryDialog
     Left = 296
     Top = 160
