--- a/src/unit7.lfm
+++ b/src/unit7.lfm
@@ -1,9 +1,83 @@
 object Form7: TForm7
   Left = 323
-  Height = 374
+  Height = 305
   Top = 107
-  Width = 925
+  Width = 800
   Caption = 'Form7'
+  ClientHeight = 305
+  ClientWidth = 800
   Position = poScreenCenter
   LCLVersion = '4.99.0.0'
+  OnCreate = FormCreate
+  object ScrollBox1: TScrollBox
+    Left = 8
+    Height = 256
+    Top = 8
+    Width = 784
+    HorzScrollBar.Page = 749
+    VertScrollBar.Page = 136
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    ClientHeight = 254
+    ClientWidth = 782
+    TabOrder = 0
+    object GroupBox1: TGroupBox
+      Left = 8
+      Height = 128
+      Top = 8
+      Width = 761
+      Anchors = [akTop, akLeft, akRight]
+      Caption = 'GroupBox1'
+      ClientHeight = 111
+      ClientWidth = 759
+      TabOrder = 0
+      object Label1: TLabel
+        Left = 8
+        Height = 16
+        Top = 8
+        Width = 40
+        Caption = 'Label1'
+      end
+      object Edit1: TEdit
+        Left = 8
+        Height = 26
+        Top = 24
+        Width = 672
+        TabOrder = 0
+        Text = 'Edit1'
+      end
+      object Label2: TLabel
+        Left = 8
+        Height = 16
+        Top = 64
+        Width = 40
+        Caption = 'Label2'
+      end
+      object Edit2: TEdit
+        Left = 8
+        Height = 26
+        Top = 80
+        Width = 672
+        TabOrder = 1
+        Text = 'Edit2'
+      end
+      object Button2: TButton
+        Left = 688
+        Height = 79
+        Top = 24
+        Width = 59
+        Caption = 'Cancel'
+        TabOrder = 2
+      end
+    end
+  end
+  object Button1: TButton
+    Left = 8
+    Height = 25
+    Top = 272
+    Width = 784
+    Anchors = [akLeft, akRight, akBottom]
+    Caption = 'Close'
+    ModalResult = 1
+    TabOrder = 1
+  end
 end
