--- a/src/unit2.lfm
+++ b/src/unit2.lfm
@@ -1,10 +1,10 @@
 object Form2: TForm2
   Left = 323
-  Height = 478
+  Height = 506
   Top = 107
   Width = 640
   Caption = 'Form2'
-  ClientHeight = 478
+  ClientHeight = 506
   ClientWidth = 640
   Position = poScreenCenter
   LCLVersion = '4.99.0.0'
@@ -12,7 +12,7 @@ object Form2: TForm2
   object Button1: TButton
     Left = 459
     Height = 25
-    Top = 440
+    Top = 469
     Width = 75
     Caption = 'Cancel'
     ModalResult = 2
@@ -21,7 +21,7 @@ object Form2: TForm2
   object Button2: TButton
     Left = 544
     Height = 25
-    Top = 440
+    Top = 469
     Width = 75
     Caption = 'OK'
     ModalResult = 1
@@ -250,10 +250,25 @@ object Form2: TForm2
   object CheckBox1: TCheckBox
     Left = 8
     Height = 22
-    Top = 443
+    Top = 472
     Width = 219
     Caption = 'Always jump to last search result'
     TabOrder = 9
+  end
+  object Label9: TLabel
+    Left = 8
+    Height = 16
+    Top = 450
+    Width = 178
+    Caption = 'Min Charcount to start search'
+  end
+  object Edit8: TEdit
+    Left = 192
+    Height = 26
+    Top = 440
+    Width = 38
+    TabOrder = 10
+    Text = 'Edit8'
   end
   object SelectDirectoryDialog1: TSelectDirectoryDialog
     Left = 296
