--- a/src/unit2.lfm
+++ b/src/unit2.lfm
@@ -184,19 +184,19 @@ object Form2: TForm2
   end
   object GroupBox2: TGroupBox
     Left = 8
-    Height = 160
+    Height = 192
     Top = 336
     Width = 240
     Caption = ' Database server '
-    ClientHeight = 143
+    ClientHeight = 175
     ClientWidth = 238
     TabOrder = 6
     object Label6: TLabel
       Left = 8
       Height = 16
       Top = 16
-      Width = 14
-      Caption = 'IP:'
+      Width = 27
+      Caption = 'URL:'
     end
     object Edit6: TEdit
       Left = 80
@@ -248,10 +248,31 @@ object Form2: TForm2
     object Edit10: TEdit
       Left = 80
       Height = 26
+      Hint = 'Username is case sensitive !'
       Top = 72
       Width = 152
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 3
       Text = 'Edit10'
+    end
+    object Button10: TButton
+      Left = 8
+      Height = 25
+      Top = 144
+      Width = 105
+      Caption = 'Testlogin'
+      TabOrder = 4
+      OnClick = Button10Click
+    end
+    object Button11: TButton
+      Left = 127
+      Height = 25
+      Top = 144
+      Width = 105
+      Caption = 'new Password'
+      TabOrder = 5
+      OnClick = Button11Click
     end
   end
   object ListBox2: TListBox
