--- a/src/unit1.lfm
+++ b/src/unit1.lfm
@@ -438,6 +438,13 @@ object Form1: TForm1
       ImageIndex = 7
       OnClick = MenuItem2Click
     end
+    object Separator2: TMenuItem
+      Caption = '-'
+    end
+    object MenuItem5: TMenuItem
+      Caption = 'Categories'
+      OnClick = MenuItem5Click
+    end
   end
   object Timer1: TTimer
     OnTimer = Timer1Timer
