--- a/src/unit6.lfm
+++ b/src/unit6.lfm
@@ -108,6 +108,7 @@ object Form6: TForm6
         Title.Caption = 'In'
       end>
     FixedCols = 0
+    Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goColSizing, goSmoothScroll]
     TabOrder = 4
     TitleImageList = Form1.ImageList1
   end
